# pointz

.github/workflows/: deploy-client.yml  deploy-infra.yml  deploy-server.yml  deploy.yml
client/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
client/src/: App.tsx  AppDataContext.tsx  Layout.tsx  LocationConsentGuard.tsx  api.ts  main.tsx  styles.css  types.ts
infra/: README.md  cdk.context.json  cdk.json  package-lock.json  package.json  tsconfig.json
server/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  drizzle.config.ts  fly.toml  package-lock.json  package.json  tsconfig.json
server/db/: cards-dataset.json  init.sql
server/db/migrations/: 0000_init.sql  0001_jittery_piledriver.sql  0002_location_consent.sql
server/db/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  _journal.json
server/src/: app.rs  app.ts  config.rs  error.rs  main.rs  server.ts  state.rs  types.ts
server/src/auth/: mod.rs  routes.rs
server/src/data/: cards.rs  cards.ts  categories.ts
server/src/domain/: categories.rs  mod.rs  types.rs
server/src/lib/: auth.ts  db.ts  ip-location.ts  location.ts  migrate.ts  recommend.ts  schema.ts  seed.ts  sync-cards.ts
server/src/routes/: auth.ts  cards.ts  catalog.rs  categories.ts  index.ts  location.rs  mod.rs  owned-cards.ts  owned_cards.rs  preferences.rs  preferences.ts  recommend.rs  recommend.ts
server/src/services/: ip_location.rs  mod.rs  overpass.rs  recommend.rs
server/src/types/: fastify.d.ts
(+18 files in other folders)
