[package]
name = "pointz-server"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "pointz-server"
path = "src/main.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[[bin]]
name = "sync-cards"
path = "src/bin/sync_cards.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.40", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "json",
    "uuid",
    "chrono",
    "rust_decimal",
    "macros",
] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-float"] }
bcrypt = "0.15"
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
thiserror = "1"
anyhow = "1"
urlencoding = "2"
regex = "1"
once_cell = "1"
async-trait = "0.1"
validator = { version = "0.18", features = ["derive"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
